0.11.99
        + Fix bug when installing new event components and event GConf
	subtree has not changed
	+ Add RSS dispatcher to show eBox events under a RSS feed
	+ Rotate log files when they reach 10MB for 7 rotations
	+ Configurable minimum free space left for being notified by means
	of percentage
	+ Add File type including uploading and downloading
	+ Event daemon now checks if it is possible to send an event
	before actually sending it
	+ Added Action forms to perform an action without modifying
	persistent data
	+ Log queries are faster if there is no results
	+ Show no data stored when there are no logs for a domain
	+ Log watcher is added in order to notify when an event has
	happened. You can configure which log watcher you may enable and
	what you want to be notify by a determined filter and/or event.
	+ RAID watcher is added to check the RAID events that may happen
	when the RAID subsystem is configured in the eBox machine
0.11
	+ Fix issue with multiple models and models with params.
	  This triggered a bug in DHCP when there was just one static
	  interface
	+ Fix _checkRowIsUnique and _checkFieldIsUnique 
	+ Fix paging 
	+ Trim long strings in log table, show tooltip with the whole string
	  and show links for URLs starting with "http://"
0.10.99
	+ Add disk usage information
	+ Show progress in backup process
	+ Add option to purge logs
	+ Create a link from /var/lib/ebox/log to /var/log/ebox
	+ Fix bug with backup descriptions containing spaces
	+ Add removeAll method on data models
	+ Add HostIP, DomainName and Port types
	+ Add readonly forms to display static information
	+ Add Danish translation thanks to Allan Jacobsen
0.10
	+ New release
0.9.100
	+ Add checking for SOAP session opened
	+ Add EventDaemon
	+ Add Watcher and Dispatch framework to support an event
	  architecture on eBox
	+ Add volatile EBox::Types in order not to store their values 
	  on GConf
	+ Add generic form
	+ Improvements on generic table
	+ Added Swedish translation
